# list-update

./: README.md  c-competitiveness.ipynb  experimental-costs.ipynb  opt-differences.ipynb
list-update-final/: CMakeLists.txt  main.cpp
